# KartoTek_app

./: Dockerfile  Makefile  README.md  build-appimage.sh  install_KartoTek.ps1  install_KartoTek.sh  install_KartoTek_macos.sh  ktmanager.desktop  ktscan.desktop  kttools.desktop  postcards.conf  postcards.conf.sample  pyproject.toml
docker/: docker-pypostcards.service
docker_flpostcards/: Dockerfile  docker-kartotech-site@.service  docker-kartotek-sites.service  postcards.conf  systemd-sites.conf  systemd.conf
docker_simpostcards/: Dockerfile  docker-kartotek-similar.service  docker-simpostcards.service  postcards.conf  systemd.conf
docs/: KartoTek_Installation_Guide_en.md  KartoTek_Installation_Guide_fr.md  KartoTek_User_Guide_fr.md  README.md  README_fr.md  tkmanager_doc.md
scripts/: i18n.py
src/flpostcards/: __init__.py  auth.py  babel.cfg  extensions.py  icon_generator.py  images.py  osm_static_map.py  run.py
src/flpostcards/blueprints/api/: __init__.py
src/flpostcards/blueprints/contact/: __init__.py
src/flpostcards/blueprints/gallery/: __init__.py
src/flpostcards/blueprints/home/: __init__.py
src/flpostcards/blueprints/map/: __init__.py
src/flpostcards/blueprints/slideshow/: __init__.py
src/flpostcards/blueprints/travel/: __init__.py
src/flpostcards/static/css/: style.css
src/flpostcards/static/js/: gallery-filters.js  map.js  nav-controls.js  slideshow.js  travel-slideshow.js  wake-lock.js
src/flpostcards/templates/: base.html
src/flpostcards/templates/card/: detail.html
src/flpostcards/templates/contact/: index.html
src/flpostcards/templates/gallery/: index.html
src/flpostcards/templates/home/: index.html
src/flpostcards/templates/map/: index.html
src/flpostcards/templates/slideshow/: index.html
src/flpostcards/templates/travel/: detail.html  index.html
src/flpostcards/translations/en/LC_MESSAGES/: flpostcards.po
src/flpostcards/translations/fr/LC_MESSAGES/: flpostcards.po
src/flpostcards/translations/uk/LC_MESSAGES/: flpostcards.po
src/libpostcards/: model.py  scan_corrector.py  similar.py
src/libpostcards/translations/en/LC_MESSAGES/: libpostcards.po
src/libpostcards/translations/fr/LC_MESSAGES/: libpostcards.po
src/simpostcards/: __init__.py  run.py
src/simpostcards/blueprints/api/: __init__.py
src/simpostcards/libs/: corrector.py  hasher.py
src/tkpostcards/: __init__.py  postcards.conf  tkimport.py  tkmanager.py  tkscan.py
src/tkpostcards/libs/: backup.py  importdir.py  ocr.py  publish.py  remotesync.py  scan_add.py  scan_corrector.py  scan_editor.py  scan_prepare.py  similar.py  size.py  transparency.py  travel.py
src/tkpostcards/scripts/: __init__.py  tktools.py
(+4 files in other folders)
