[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "pypostcards"
authors = [
  {name = "bibi21000", email = "bibi21000@gmail.com"},
]
maintainers = [
  {name = "bibi21000", email = "bibi21000@gmail.com"}
]
description = "Scan, manage and publish your postcards collection"
version = "3.1.1"
requires-python = ">=3.9"
dependencies = [
    "pillow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
flask = [
    "Flask",
    "Flask-Babel",
    "Werkzeug",
    "Jinja2",
    "MarkupSafe",
    "Flask-Cachecontrol",
    "itsdangerous",
    "requests",
    "PyJWT",
]
tkinter = [
    "click",
    "pytesseract",
    "deskew",
    "opencv-python",
    "click",
    "numpy",
    "tqdm",
    #"zstandard",
    "pyzstd",
    "paramiko",
]
ocr = [
    "python-doctr[torch]",
    "transformers",
    "torch",
    "torchvision",
    "wordfreq",
    "kraken",
]
similar = [
    "requests",
    "pillow",
    "imagehash",
    "torch",
    "torchvision",
    "open-clip-torch",
]
scan = [
    "opencv-python",
    "numpy"
]
simpostcards = [
    "Flask",
    "opencv-python-headless",
    "numpy",
    "pillow",
    "imagehash",
]
travel = [
    "ortools"
]
prod = [
    "gunicorn"
]
dev = [
    "build",
    "pytest",
    "coverage",
    "ruff",
    "Babel",
]
appimage = [
    "python-appimage",
]

[project.urls]
HomePage = "https://github.com/bibi21000/pypostcards"
Issues = "https://github.com/bibi21000/pypostcards/issues"

[project.scripts]
kttools = "tkpostcards.scripts.tktools:cli"
ktmanager = "tkpostcards.tkmanager:run"
ktscan = "tkpostcards.tkscan:run"
simrun = "simpostcards.run:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.babel]
domain = "flpostcards"
mapping_file = "babel.cfg"

[tool.setuptools.package-data]
tkpostcards = [
    "translations/**/*.po",
    "translations/**/*.mo",
    "images/*.png",
]
flpostcards = [
    "translations/**/*.po",
    "translations/**/*.mo",
    "templates/**/*",
    "static/**/*",
]
libpostcards = [
    "translations/**/*.po",
    "translations/**/*.mo",
]

